--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_CROSSMINT_API_KEY=
 
-# Chain selection (solana, stellar, or EVM chain like optimism-sepolia)
-NEXT_PUBLIC_CHAIN="solana"
+# Check all supported chains: https://docs.crossmint.com/introduction/supported-chains
+NEXT_PUBLIC_CHAIN="solana" # "base-sepolia", "stellar", etc.
