--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@crossmint/client-sdk-react-ui": "2.4.13",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "next": "15.2.4",
     "react": "^19.0.0",
